Fix search button on mobile devices

--- a/src/client/stylesheets/partials/_mpdp-search.scss
+++ b/src/client/stylesheets/partials/_mpdp-search.scss
@@ -31,6 +31,12 @@
   left: 0;
   right: 0;
   z-index: 1;
+  
+  // On mobile, use static positioning to push content down
+  @media (max-width: 640px) {
+    position: static;
+    margin-bottom: 1rem;
+  }
 }
 
 #suggestions div {
